--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
    <title>Serlokas</title>
 </head>
 
-<body style="background-color: #EAEBED;">
+<body style="background-color: #EAEBED;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;">
    <main style="display:inline-block; width:50%; margin-top:10%; margin-left:25%;">
       <img style="display: inline-block; width:40%; float:left;" src="serlokas.jpg"
          alt="Serlokas su pypke iesko nusikaltelio menesienoje">
-      <div style="display: inline-block; width:50%; float:left; margin-left: 10%; margin-top: 13%; text-align: center;">
-         <h1 style="display: inline-block; width:100%; font-size: 90px;">404</h1>
-         <p style="display: inline-block; width:100%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
+      <div style="display: inline-block; width:50%; float:left; margin-left: 10%; margin-top: 5%; text-align: center;">
+         <h1 style="display: inline-block; width:100%; font-size: 90px; margin:0;">404</h1>
+         <p style="display: inline-block; width:100%;font-size: 25px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
             repellat sequi consectetur dolorum aliquid excepturi fugit magnam voluptate. Aliquam, impedit.</p>
          <p style="display: inline-block; width:100%;">Lorem ipsum dolor sit amet consectetur.</p>
          <a href="#" style="display: inline-block;background-color: aqua; ">Back home</a>
