--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <img style="display: inline-block; width:40%; float:left;" src="serlokas.jpg"
          alt="Serlokas su pypke iesko nusikaltelio menesienoje">
       <div style="display: inline-block; width:50%; float:left; margin-left: 10%; margin-top: 5%; text-align: center;">
-         <h1 style="display: inline-block; width:100%; font-size: 90px; margin:0;">404</h1>
-         <p style="display: inline-block; width:100%;font-size: 25px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
+         <h1 style="display: inline-block; width:100%; font-size: 90px; margin:0;color: #343e48;">404</h1>
+         <p style="display: inline-block; width:100%;font-size: 25px;line-height: 30px;color: #5F657F;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
             repellat sequi consectetur dolorum aliquid excepturi fugit magnam voluptate. Aliquam, impedit.</p>
-         <p style="display: inline-block; width:100%;">Lorem ipsum dolor sit amet consectetur.</p>
-         <a href="#" style="display: inline-block;background-color: aqua; ">Back home</a>
+         <p style="display: inline-block; width:100%;color: #B9BACC;">Lorem ipsum dolor sit amet consectetur.</p>
+         <a href="#" style="display: inline-block;background-color:#696F89;color: white; padding: 15px;padding-left: 25px;padding-right: 25px;text-decoration: none;text-transform: uppercase; font-weight: bold;">Back home</a>
       </div>
    </main>
 </body>
